# Kuota

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: AUTOUPDATE.md  CHANGELOG_AI.md  DECISIONS.md  HANDOFF.md
docs/releases/: v1.0.4.md
proxy/: gpt_interceptor.py  setup.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: mac_codex_login.rs  main.rs  proxy.rs  tray.rs  usage.rs  windows_codex_login.rs
src/components/: AccountCard.tsx  AccountForm.tsx  UsageBar.tsx
src/hooks/: useTimeUntil.ts
src/store/: useStore.ts
src/types/: index.ts
