[package]
name = "kuota"
version = "1.0.0"
description = "Kuota - Codex account switcher powered by codex-auth"
authors = ["RichTunic"]
edition = "2021"

[lib]
name = "kuota_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1"
dirs = "5"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
